Battleクラスの追加

--- a/DirectXgame.vcxproj.filters
+++ b/DirectXgame.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClCompile Include="Engine\TimeBaseLoopExecuter\TimeBaseLoopExecuter.cpp">
       <Filter>Engine\TimeBaseLoopExecuter</Filter>
     </ClCompile>
+    <ClCompile Include="Game\GameScene\Battle\Battle.cpp">
+      <Filter>Game\GameScene\Battle</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Camera\Camera.h">
@@ -197,6 +200,9 @@
       <Filter>Engine\TimeBaseLoopExecuter</Filter>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Game\GameScene\Battle\Battle.h">
+      <Filter>Game\GameScene\Battle</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
@@ -270,6 +276,9 @@
     </Filter>
     <Filter Include="Engine\TimeBaseLoopExecuter">
       <UniqueIdentifier>{c6624870-76a9-40a9-98f5-f85f997b9828}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\GameScene\Battle">
+      <UniqueIdentifier>{823b8708-ef7f-4cbe-b47c-77839b2ba995}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
