--- a/DirectXgame.vcxproj
+++ b/DirectXgame.vcxproj
@@ -133,6 +133,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="math\Vector2.cpp" />
     <ClCompile Include="math\Vector3.cpp" />
     <ClCompile Include="math\Vector4.cpp" />
+    <ClCompile Include="MusicScore.cpp" />
     <ClCompile Include="Notes.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
@@ -173,6 +174,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="math\Vector2.h" />
     <ClInclude Include="math\Vector3.h" />
     <ClInclude Include="math\Vector4.h" />
+    <ClInclude Include="MusicScore.h" />
     <ClInclude Include="Notes.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="resource.h" />
