--- a/DirectXgame.vcxproj.filters
+++ b/DirectXgame.vcxproj.filters
@@ -24,10 +24,10 @@
       <Filter>Engine\Manager\TextureManager</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Texture\Model.cpp">
-      <Filter>Engine\Model</Filter>
+      <Filter>Engine\Resources\Model</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Texture\Texture2D.cpp">
-      <Filter>Engine\Texture</Filter>
+      <Filter>Engine\Resources\Texture</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Base\WinApp.cpp">
       <Filter>Engine\WinApp</Filter>
@@ -101,6 +101,9 @@
     <ClCompile Include="Notes.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="MusicScore.cpp" />
+    <ClCompile Include="Engine\Texture\Line\Line.cpp">
+      <Filter>Engine\Resources\Line</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Camera\Camera.h">
@@ -128,10 +131,10 @@
       <Filter>Engine\Manager\TextureManager</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Texture\Model.h">
-      <Filter>Engine\Model</Filter>
+      <Filter>Engine\Resources\Model</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Texture\Texture2D.h">
-      <Filter>Engine\Texture</Filter>
+      <Filter>Engine\Resources\Texture</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Base\WinApp.h">
       <Filter>Engine\WinApp</Filter>
@@ -213,6 +216,9 @@
     <ClInclude Include="Notes.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="MusicScore.h" />
+    <ClInclude Include="Engine\Texture\Line\Line.h">
+      <Filter>Engine\Resources\Line</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
@@ -247,12 +253,6 @@
     </Filter>
     <Filter Include="Engine\Manager\TextureManager">
       <UniqueIdentifier>{15d90bdf-5fc6-48a7-8ca8-fd7ebc4b7346}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\Model">
-      <UniqueIdentifier>{e96bed89-f1fc-4f25-b651-dda88c242102}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\Texture">
-      <UniqueIdentifier>{6383f2ed-4d38-4943-b887-e51f86a2de9a}</UniqueIdentifier>
     </Filter>
     <Filter Include="Engine\WinApp">
       <UniqueIdentifier>{d479967e-da47-4259-aafc-7f4c20691499}</UniqueIdentifier>
@@ -292,6 +292,18 @@
     </Filter>
     <Filter Include="Game\GameScene\Title">
       <UniqueIdentifier>{7fbb76bc-017e-4cf5-a1bf-15851da03dc8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Resources">
+      <UniqueIdentifier>{c2e7a96f-90bb-4c4f-89a8-50e18a27966d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Resources\Texture">
+      <UniqueIdentifier>{6383f2ed-4d38-4943-b887-e51f86a2de9a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Resources\Model">
+      <UniqueIdentifier>{e96bed89-f1fc-4f25-b651-dda88c242102}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Resources\Line">
+      <UniqueIdentifier>{cbf83273-a812-4432-88e9-84e4b6075c48}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
