--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,27 @@ Size=170,48
 Collapsed=0
 
 [Window][camera]
-Pos=3,74
+Pos=55,206
 Size=303,205
 Collapsed=0
 
 [Window][player flag]
 Pos=352,81
 Size=107,116
+Collapsed=0
+
+[Window][PL]
+Pos=33,67
+Size=254,121
+Collapsed=0
+
+[Window][MakeCatmull-Rom]
+Pos=546,49
+Size=291,107
+Collapsed=0
+
+[Window][Catmull-Rom]
+Pos=12,430
+Size=513,246
 Collapsed=0
 
