--- a/DirectXgame.vcxproj
+++ b/DirectXgame.vcxproj
@@ -128,16 +128,16 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Game\GameScene\GameScene.cpp" />
     <ClCompile Include="Game\GameScene\Title\Title.cpp" />
     <ClCompile Include="Game\Ground\Ground.cpp" />
+    <ClCompile Include="Game\MakeCatmull\MakeCatmull.cpp" />
+    <ClCompile Include="Game\MusicScore\MusicScore.cpp" />
+    <ClCompile Include="Game\Notes\Notes.cpp" />
+    <ClCompile Include="Game\Player\Player.cpp" />
     <ClCompile Include="Game\Skydome\Skydome.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MakeCatmull.cpp" />
     <ClCompile Include="math\Matrix4x4.cpp" />
     <ClCompile Include="math\Vector2.cpp" />
     <ClCompile Include="math\Vector3.cpp" />
     <ClCompile Include="math\Vector4.cpp" />
-    <ClCompile Include="MusicScore.cpp" />
-    <ClCompile Include="Notes.cpp" />
-    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Base\CommandDirectX.h" />
@@ -172,15 +172,15 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Game\GameScene\GameScene.h" />
     <ClInclude Include="Game\GameScene\Title\Title.h" />
     <ClInclude Include="Game\Ground\Ground.h" />
+    <ClInclude Include="Game\MakeCatmull\MakeCatmull.h" />
+    <ClInclude Include="Game\MusicScore\MusicScore.h" />
+    <ClInclude Include="Game\Notes\Notes.h" />
+    <ClInclude Include="Game\Player\Player.h" />
     <ClInclude Include="Game\Skydome\Skydome.h" />
-    <ClInclude Include="MakeCatmull.h" />
     <ClInclude Include="math\Matrix4x4.h" />
     <ClInclude Include="math\Vector2.h" />
     <ClInclude Include="math\Vector3.h" />
     <ClInclude Include="math\Vector4.h" />
-    <ClInclude Include="MusicScore.h" />
-    <ClInclude Include="Notes.h" />
-    <ClInclude Include="Player.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
