二点間の距離を測れるようになった

--- a/imgui.ini
+++ b/imgui.ini
@@ -24,17 +24,27 @@ Size=339,192
 Collapsed=0
 
 [Window][MakeCatmull-Rom]
-Pos=654,71
-Size=486,204
+Pos=275,23
+Size=502,218
 Collapsed=0
 
 [Window][Catmull-Rom]
-Pos=78,53
+Pos=655,160
 Size=514,474
-Collapsed=1
+Collapsed=0
 
 [Window][Line]
 Pos=950,31
 Size=251,112
+Collapsed=0
+
+[Window][点の位置]
+Pos=35,246
+Size=419,437
+Collapsed=0
+
+[Window][線の長さ]
+Pos=834,96
+Size=415,440
 Collapsed=0
 
