仮で分割数をimguiで変更できるようにした

--- a/imgui.ini
+++ b/imgui.ini
@@ -24,7 +24,7 @@ Size=339,192
 Collapsed=0
 
 [Window][MakeCatmull-Rom]
-Pos=551,12
+Pos=582,59
 Size=502,249
 Collapsed=0
 
@@ -39,12 +39,17 @@ Size=251,112
 Collapsed=0
 
 [Window][点の位置]
-Pos=1,164
+Pos=2,157
 Size=419,437
 Collapsed=0
 
 [Window][線の長さ]
 Pos=899,163
 Size=415,440
+Collapsed=0
+
+[Window][線の分割数]
+Pos=35,51
+Size=597,591
 Collapsed=0
 
