--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Collapsed=1
 [Window][camera]
 Pos=-3,56
 Size=303,205
-Collapsed=1
+Collapsed=0
 
 [Window][player flag]
 Pos=178,88
@@ -24,7 +24,7 @@ Size=339,192
 Collapsed=0
 
 [Window][MakeCatmull-Rom]
-Pos=774,29
+Pos=802,27
 Size=502,249
 Collapsed=0
 
@@ -41,7 +41,7 @@ Collapsed=0
 [Window][点の位置]
 Pos=2,157
 Size=419,437
-Collapsed=0
+Collapsed=1
 
 [Window][線の長さ]
 Pos=838,102
@@ -51,5 +51,10 @@ Collapsed=1
 [Window][線の分割数]
 Pos=66,34
 Size=800,660
+Collapsed=1
+
+[Window][Hero]
+Pos=261,66
+Size=249,94
 Collapsed=0
 
