--- a/DirectXgame.vcxproj.filters
+++ b/DirectXgame.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClCompile Include="Game\BattleAnimation\BattleAnimation.cpp">
       <Filter>Game\BattleAnimation</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Character\Boss\Boss.cpp">
+      <Filter>Game\Character\Boss</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Camera\Camera.h">
@@ -260,6 +263,9 @@
     <ClInclude Include="Game\PartsEnum.h">
       <Filter>Game</Filter>
     </ClInclude>
+    <ClInclude Include="Game\Character\Boss\Boss.h">
+      <Filter>Game\Character\Boss</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
@@ -369,6 +375,9 @@
     </Filter>
     <Filter Include="Game\BattleAnimation">
       <UniqueIdentifier>{5b402d87-23ac-496d-b9d9-be077d15c087}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\Character\Boss">
+      <UniqueIdentifier>{b75deacc-5b55-41b2-8cf2-c8cea640cd29}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
