--- a/imgui.ini
+++ b/imgui.ini
@@ -6,17 +6,17 @@ Collapsed=0
 [Window][Control panel]
 Pos=4,3
 Size=170,48
-Collapsed=1
+Collapsed=0
 
 [Window][camera]
 Pos=-3,56
 Size=303,205
-Collapsed=0
+Collapsed=1
 
 [Window][player flag]
-Pos=178,88
+Pos=6,34
 Size=190,147
-Collapsed=0
+Collapsed=1
 
 [Window][PL]
 Pos=16,318
@@ -54,7 +54,12 @@ Size=800,660
 Collapsed=1
 
 [Window][Hero]
-Pos=261,66
-Size=249,94
+Pos=8,230
+Size=242,82
+Collapsed=0
+
+[Window][Boss]
+Pos=9,145
+Size=241,85
 Collapsed=0
 
