モデル同士の代入を可能に。仮モデルの実装

--- a/imgui.ini
+++ b/imgui.ini
@@ -53,3 +53,13 @@ Pos=-108,20
 Size=753,591
 Collapsed=1
 
+[Window][Hero]
+Pos=8,230
+Size=242,82
+Collapsed=0
+
+[Window][Boss]
+Pos=9,145
+Size=241,85
+Collapsed=0
+
