ステージを消して増やし続ける処理を追加

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=157,49
 Collapsed=0
 
 [Window][camera]
-Pos=-2,52
+Pos=-2,47
 Size=207,101
 Collapsed=0
 
@@ -67,4 +67,9 @@ Collapsed=0
 Pos=-3,157
 Size=262,218
 Collapsed=1
+
+[Window][Distance]
+Pos=213,20
+Size=173,59
+Collapsed=0
 
