--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Collapsed=0
 [Window][camera]
 Pos=-3,56
 Size=303,205
-Collapsed=1
+Collapsed=0
 
 [Window][player flag]
 Pos=180,90
@@ -61,5 +61,15 @@ Collapsed=0
 [Window][Boss]
 Pos=9,145
 Size=241,85
+Collapsed=0
+
+[Window][Stage]
+Pos=-2,79
+Size=122,524
+Collapsed=1
+
+[Window][Distance]
+Pos=198,10
+Size=84,48
 Collapsed=0
 
