ロードの仕組み自体は大体完成

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=170,48
 Collapsed=0
 
 [Window][camera]
-Pos=-3,56
+Pos=341,189
 Size=303,205
 Collapsed=0
 
@@ -71,5 +71,15 @@ Collapsed=1
 [Window][Distance]
 Pos=198,10
 Size=84,48
+Collapsed=0
+
+[Window][確認]
+Pos=431,9
+Size=305,138
+Collapsed=0
+
+[Window][Animation]
+Pos=17,123
+Size=655,388
 Collapsed=0
 
