--- a/DirectXgame.vcxproj
+++ b/DirectXgame.vcxproj
@@ -102,6 +102,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   <ItemGroup>
     <ClCompile Include="Engine\Base\CommandDirectX.cpp" />
     <ClCompile Include="Engine\Base\GraphicsPipeline\GraphicsPipeline.cpp" />
+    <ClCompile Include="Engine\Base\MultipathRendering\MultipathRendering.cpp" />
     <ClCompile Include="Engine\Base\WinApp.cpp" />
     <ClCompile Include="Engine\Camera\Camera.cpp" />
     <ClCompile Include="Engine\Camera\DebugCamera\DebugCamera.cpp" />
@@ -148,6 +149,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\Base\CommandDirectX.h" />
     <ClInclude Include="Engine\Base\ConstantBuffer.h" />
     <ClInclude Include="Engine\Base\GraphicsPipeline\GraphicsPipeline.h" />
+    <ClInclude Include="Engine\Base\MultipathRendering\MultipathRendering.h" />
     <ClInclude Include="Engine\Base\WinApp.h" />
     <ClInclude Include="Engine\Camera\Camera.h" />
     <ClInclude Include="Engine\Camera\DebugCamera\DebugCamera.h" />
