音ズレ原因特定？

--- a/DirectXgame.vcxproj.filters
+++ b/DirectXgame.vcxproj.filters
@@ -278,6 +278,7 @@
     <ClInclude Include="math\Rand.h">
       <Filter>math</Filter>
     </ClInclude>
+    <ClInclude Include="FrameCount.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
