--- a/DirectXgame.vcxproj
+++ b/DirectXgame.vcxproj
@@ -174,6 +174,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="externals\imgui\imstb_rectpack.h" />
     <ClInclude Include="externals\imgui\imstb_textedit.h" />
     <ClInclude Include="externals\imgui\imstb_truetype.h" />
+    <ClInclude Include="FrameCount.h" />
     <ClInclude Include="Game\BattleAnimation\BattleAnimation.h" />
     <ClInclude Include="Game\Character\BaseCharacter\BaseCharacter.h" />
     <ClInclude Include="Game\Character\Boss\Boss.h" />
