bossBulletのモデルを引き渡し、フラグが立ったら攻撃をするように追加。入力を受け付けたフラグが立てば消滅するように追加

--- a/DirectXgame.vcxproj
+++ b/DirectXgame.vcxproj
@@ -128,6 +128,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Game\BattleAnimation\BattleAnimation.cpp" />
     <ClCompile Include="Game\Character\BaseCharacter\BaseCharacter.cpp" />
     <ClCompile Include="Game\Character\Boss\Boss.cpp" />
+    <ClCompile Include="Game\Character\Boss\BossBullet\BossBullet.cpp" />
     <ClCompile Include="Game\Character\Hero\Hero.cpp" />
     <ClCompile Include="Game\GameScene\Battle\Battle.cpp" />
     <ClCompile Include="Game\GameScene\GameScene.cpp" />
@@ -178,6 +179,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Game\BattleAnimation\BattleAnimation.h" />
     <ClInclude Include="Game\Character\BaseCharacter\BaseCharacter.h" />
     <ClInclude Include="Game\Character\Boss\Boss.h" />
+    <ClInclude Include="Game\Character\Boss\BossBullet\BossBullet.h" />
     <ClInclude Include="Game\Character\Hero\Hero.h" />
     <ClInclude Include="Game\GameScene\Battle\Battle.h" />
     <ClInclude Include="Game\GameScene\GameScene.h" />
