雑にブレンドの変更を実装

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,12 @@ Size=170,48
 Collapsed=0
 
 [Window][camera]
-Pos=-1,287
+Pos=3,260
 Size=303,205
 Collapsed=0
 
 [Window][player flag]
-Pos=0,248
+Pos=1,208
 Size=190,147
 Collapsed=1
 
@@ -64,7 +64,7 @@ Size=252,83
 Collapsed=1
 
 [Window][Stage]
-Pos=147,7
+Pos=432,27
 Size=816,558
 Collapsed=1
 
@@ -86,5 +86,10 @@ Collapsed=1
 [Window][aaaaa]
 Pos=27,58
 Size=211,103
+Collapsed=0
+
+[Window][test]
+Pos=60,60
+Size=94,100
 Collapsed=0
 
