--- a/DirectXgame.vcxproj.filters
+++ b/DirectXgame.vcxproj.filters
@@ -137,6 +137,9 @@
     <ClCompile Include="Engine\Texture\Particle\Particle.cpp">
       <Filter>Engine\Resources\Particle</Filter>
     </ClCompile>
+    <ClCompile Include="math\Billboard\Billboard.cpp">
+      <Filter>math\Billboard</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Camera\Camera.h">
@@ -290,6 +293,9 @@
     <ClInclude Include="Engine\Texture\Particle\Particle.h">
       <Filter>Engine\Resources\Particle</Filter>
     </ClInclude>
+    <ClInclude Include="math\Billboard\Billboard.h">
+      <Filter>math\Billboard</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
@@ -414,6 +420,9 @@
     </Filter>
     <Filter Include="Engine\Resources\Particle">
       <UniqueIdentifier>{66889ca0-2e8a-4295-9a61-1e1fc1b11a72}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="math\Billboard">
+      <UniqueIdentifier>{482df7cd-4aa6-45b1-8c09-da57a0c96694}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
