--- a/DirectXgame.vcxproj
+++ b/DirectXgame.vcxproj
@@ -133,6 +133,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Game\Character\Hero\Hero.cpp" />
     <ClCompile Include="Game\GameScene\Battle\Battle.cpp" />
     <ClCompile Include="Game\GameScene\GameScene.cpp" />
+    <ClCompile Include="Game\GameScene\Result\Result.cpp" />
     <ClCompile Include="Game\GameScene\Title\Title.cpp" />
     <ClCompile Include="Game\Ground\Ground.cpp" />
     <ClCompile Include="Game\MakeCatmull\MakeCatmull.cpp" />
@@ -188,6 +189,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Game\Character\Hero\Hero.h" />
     <ClInclude Include="Game\GameScene\Battle\Battle.h" />
     <ClInclude Include="Game\GameScene\GameScene.h" />
+    <ClInclude Include="Game\GameScene\Result\Result.h" />
     <ClInclude Include="Game\GameScene\Title\Title.h" />
     <ClInclude Include="Game\Ground\Ground.h" />
     <ClInclude Include="Game\MakeCatmull\MakeCatmull.h" />
