--- a/DirectXgame.vcxproj.filters
+++ b/DirectXgame.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClCompile Include="math\Billboard\Billboard.cpp">
       <Filter>math\Billboard</Filter>
     </ClCompile>
+    <ClCompile Include="Game\GameScene\Result\Result.cpp">
+      <Filter>Game\GameScene\Result</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Camera\Camera.h">
@@ -301,6 +304,9 @@
     <ClInclude Include="math\Billboard\Billboard.h">
       <Filter>math\Billboard</Filter>
     </ClInclude>
+    <ClInclude Include="Game\GameScene\Result\Result.h">
+      <Filter>Game\GameScene\Result</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
@@ -428,6 +434,9 @@
     </Filter>
     <Filter Include="math\Billboard">
       <UniqueIdentifier>{7ead2d24-7937-4d07-bee0-1148d3edd616}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\GameScene\Result">
+      <UniqueIdentifier>{318a18b0-0e99-4a48-bba5-666343c09399}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
