--- a/DirectXgame.vcxproj
+++ b/DirectXgame.vcxproj
@@ -131,6 +131,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Game\Character\Boss\Boss.cpp" />
     <ClCompile Include="Game\Character\Boss\BossBullet\BossBullet.cpp" />
     <ClCompile Include="Game\Character\Hero\Hero.cpp" />
+    <ClCompile Include="Game\Effect\Effect.cpp" />
     <ClCompile Include="Game\GameScene\Battle\Battle.cpp" />
     <ClCompile Include="Game\GameScene\GameScene.cpp" />
     <ClCompile Include="Game\GameScene\Result\Result.cpp" />
@@ -143,7 +144,6 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Game\Skydome\Skydome.cpp" />
     <ClCompile Include="Game\Stage\Stage.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="math\Billboard\Billboard.cpp" />
     <ClCompile Include="math\Matrix4x4.cpp" />
     <ClCompile Include="math\Rand.cpp" />
     <ClCompile Include="math\Vector2.cpp" />
@@ -187,6 +187,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Game\Character\Boss\Boss.h" />
     <ClInclude Include="Game\Character\Boss\BossBullet\BossBullet.h" />
     <ClInclude Include="Game\Character\Hero\Hero.h" />
+    <ClInclude Include="Game\Effect\Effect.h" />
     <ClInclude Include="Game\GameScene\Battle\Battle.h" />
     <ClInclude Include="Game\GameScene\GameScene.h" />
     <ClInclude Include="Game\GameScene\Result\Result.h" />
@@ -199,7 +200,6 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Game\Player\Player.h" />
     <ClInclude Include="Game\Skydome\Skydome.h" />
     <ClInclude Include="Game\Stage\Stage.h" />
-    <ClInclude Include="math\Billboard\Billboard.h" />
     <ClInclude Include="math\Matrix4x4.h" />
     <ClInclude Include="math\Rand.h" />
     <ClInclude Include="math\Vector2.h" />
