--- a/imgui.ini
+++ b/imgui.ini
@@ -99,7 +99,17 @@ Size=255,80
 Collapsed=0
 
 [Window][box]
+Pos=311,24
+Size=134,152
+Collapsed=0
+
+[Window][te]
 Pos=60,60
-Size=94,146
+Size=76,54
+Collapsed=0
+
+[Window][ingame]
+Pos=60,60
+Size=206,151
 Collapsed=0
 
