--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=38,40
 Size=400,400
-Collapsed=0
+Collapsed=1
 
 [Window][Control panel]
-Pos=60,11
+Pos=3,1
 Size=170,48
 Collapsed=0
 
@@ -16,7 +16,7 @@ Collapsed=1
 [Window][player flag]
 Pos=1,208
 Size=190,147
-Collapsed=0
+Collapsed=1
 
 [Window][PL]
 Pos=16,318
@@ -54,8 +54,8 @@ Size=753,591
 Collapsed=1
 
 [Window][Hero]
-Pos=-1,266
-Size=242,82
+Pos=18,372
+Size=292,183
 Collapsed=1
 
 [Window][Boss]
@@ -71,7 +71,7 @@ Collapsed=1
 [Window][Distance]
 Pos=186,3
 Size=109,48
-Collapsed=0
+Collapsed=1
 
 [Window][確認]
 Pos=431,9
@@ -84,9 +84,9 @@ Size=655,388
 Collapsed=1
 
 [Window][aaaaa]
-Pos=184,191
+Pos=5,78
 Size=221,125
-Collapsed=0
+Collapsed=1
 
 [Window][test]
 Pos=60,60
@@ -99,9 +99,9 @@ Size=255,80
 Collapsed=0
 
 [Window][box]
-Pos=311,24
-Size=134,152
-Collapsed=0
+Pos=218,14
+Size=236,153
+Collapsed=1
 
 [Window][te]
 Pos=60,60
@@ -109,7 +109,12 @@ Size=76,54
 Collapsed=0
 
 [Window][ingame]
-Pos=60,60
+Pos=5,60
 Size=206,151
+Collapsed=1
+
+[Window][not]
+Pos=422,59
+Size=377,150
 Collapsed=0
 
