--- a/DirectXgame.vcxproj.filters
+++ b/DirectXgame.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClCompile Include="Game\GameScene\Result\Result.cpp">
       <Filter>Game\GameScene\Result</Filter>
     </ClCompile>
+    <ClCompile Include="Game\NotesEffect\NotesEffect.cpp">
+      <Filter>Game\NotesEffect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Camera\Camera.h">
@@ -307,6 +310,9 @@
     <ClInclude Include="Game\GameScene\Result\Result.h">
       <Filter>Game\GameScene\Result</Filter>
     </ClInclude>
+    <ClInclude Include="Game\NotesEffect\NotesEffect.h">
+      <Filter>Game\NotesEffect</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
@@ -437,6 +443,9 @@
     </Filter>
     <Filter Include="Game\GameScene\Result">
       <UniqueIdentifier>{318a18b0-0e99-4a48-bba5-666343c09399}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\NotesEffect">
+      <UniqueIdentifier>{66c39e6a-eaeb-4702-b3dd-2cf856075b43}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
