--- a/imgui.ini
+++ b/imgui.ini
@@ -109,12 +109,22 @@ Size=76,54
 Collapsed=0
 
 [Window][ingame]
-Pos=-4,57
+Pos=-7,56
 Size=206,151
 Collapsed=0
 
 [Window][not]
 Pos=422,59
 Size=377,150
+Collapsed=0
+
+[Window][位置座標]
+Pos=60,60
+Size=118,100
+Collapsed=0
+
+[Window][イージング関連]
+Pos=60,60
+Size=115,65
 Collapsed=0
 
